# pe_recovery_tools

find_forwarders/: README.md
find_forwarders/src/: CMakeLists.txt  exports_lookup.cpp  exports_lookup.h  main.cpp
find_forwarders/src/peloader/: pe_raw_to_virtual.cpp  pe_raw_to_virtual.h
imports_unerase/: README.md
imports_unerase/src/: CMakeLists.txt  main.cpp
imports_unerase/src/peloader/: exported_func.cpp  exported_func.h  exports_lookup.cpp  exports_lookup.h  fix_imports.cpp  fix_imports.h  load_imports.cpp  load_imports.h  pe_hdrs_helper.h  pe_raw_to_virtual.h
pe_unmapper/: README.md
pe_unmapper/src/: main.cpp  pe_virtual_to_raw.cpp
va_to_import/: README.md
va_to_import/src/: CMakeLists.txt  main.cpp
